--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -7,4 +7,6 @@
     text-rendering: optimizeLegibility;
     font-family: 'Inter', "Arial", "sans-serif";
     background-color:#2A2C2F;
+    /*overscroll-behavior-x: none;*/
+    /*overflow-x: hidden;*/
 }
