--- a/pages/index.css
+++ b/pages/index.css
@@ -25,14 +25,14 @@
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 
 @import url(../blocks/places/places.css);
-@import url(../blocks/places/place/place.css);
-@import url(../blocks/places/__image/place__image.css);
-@import url(../blocks/places/__link/place__link.css);
-@import url(../blocks/places/__paragraph/place__paragraph.css);
-@import url(../blocks/places/__title/place__title.css);
-@import url(../blocks/places/__url-heading/place__url-heading.css);
-@import url(../blocks/places/__website/place__website.css);
-@import url(../blocks/places/__paragraphs/place__paragraphs.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__paragraphs/place__paragraphs.css);
 
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__overlay/cover__overlay.css);
