--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,9 @@
 .photo-grid {
     margin: 0 auto;
-    padding: 0 0 92px 0;
+    padding: 0 0 92px;
     max-width: 1184px;
     display: grid;
-    grid-template-columns: repeat(4, 285px);
+    grid-template-columns: repeat(4, 284px);
     grid-template-rows: repeat(3, 215px);
     grid-gap: 16px;
 }
@@ -17,7 +17,7 @@
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .photo-grid {
-        padding: 0 0 88px 0;
+        padding: 0 0 88px;
         max-width: 720px;
         grid-template-columns: repeat(2, 352px);
         grid-template-rows: repeat(6, 264px);
@@ -26,7 +26,7 @@
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .photo-grid {
-        padding: 0 0 64px 0;
+        padding: 0 0 64px;
         max-width: 288px;
         grid-template-columns: 288px;
         grid-gap: 12px;
