--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,7 +2,7 @@
     width: 176px;
     height: 52px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 320px) and (max-width: 720px) {
     .header__logo {
         width: 142px;
         height: 42px;
