--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,10 @@
 .header__logo {
-    width: 176px;
-    height: 52px;
+    max-width: 176px;
+    max-height: 52px;
 }
-@media screen and (max-width: 320px) and (max-width: 720px) {
+@media screen and (max-width: 720px) {
     .header__logo {
-        width: 142px;
-        height: 42px;
+        max-width: 142px;
+        max-height: 42px;
     }
 }
