--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,26 @@
 .lead__image {
     margin: 0;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 984px;
+    width: 100%;
+    height: 615px;
+}
+
+@media screen and (max-width: 1279px) {
+    .lead__image {
+        max-width: 928px;
+        height: 580px;
+    }
+}
+@media screen and (max-width: 1023px ) {
+    .lead__image {
+        width: 768px;
+        height: 480px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .lead__image {
+        width: 320px;
+        height: 200px;
+    }
 }
